# RustQC

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  TODO-plot-tweaks-report.md  TODO-run-qualimap.md  build.rs  netlify.toml
.cargo/: audit.toml
.github/workflows/: build_docs.yml  ci.yml  docs.yml  release.yml
benchmark/: README.md  run_benchmarks.py  run_cpu_scaling.sh  run_dupRadar_R.R
benchmark/RSeQC/large/: infer_experiment.txt  inner_distance.txt  junction_annotation.junction_plot.r  junction_annotation.txt  read_distribution.txt
benchmark/RSeQC/small/: bam_stat.txt  infer_experiment.txt  inner_distance.inner_distance_plot.r  junction_annotation.junction.Interact.bed  junction_annotation.junction_plot.r  junction_annotation.txt  junction_saturation.txt  read_distribution.txt  read_duplication.DupRate_plot.r
benchmark/RustQC/large/: GM12878_REP1.markdup.sorted.bam_stat.txt  GM12878_REP1.markdup.sorted.biotype_counts.tsv  GM12878_REP1.markdup.sorted.biotype_counts_mqc.tsv  GM12878_REP1.markdup.sorted.biotype_counts_rrna_mqc.tsv  GM12878_REP1.markdup.sorted.featureCounts.tsv.summary  GM12878_REP1.markdup.sorted.infer_experiment.txt  GM12878_REP1.markdup.sorted.inner_distance_freq.txt  GM12878_REP1.markdup.sorted.inner_distance_plot.r  GM12878_REP1.markdup.sorted.inner_distance_summary.txt  GM12878_REP1.markdup.sorted.junctionSaturation_plot.r  GM12878_REP1.markdup.sorted.junctionSaturation_summary.txt  GM12878_REP1.markdup.sorted.junction_annotation.txt  GM12878_REP1.markdup.sorted.junction_plot.r  GM12878_REP1.markdup.sorted.pos.DupRate.xls  GM12878_REP1.markdup.sorted.read_distribution.txt  GM12878_REP1.markdup.sorted.seq.DupRate.xls
benchmark/RustQC/small/: test.biotype_counts.tsv  test.biotype_counts_mqc.tsv  test.featureCounts.tsv  test.featureCounts.tsv.summary  test.infer_experiment.txt  test.inner_distance.txt  test.inner_distance_freq.txt  test.inner_distance_plot.r  test.inner_distance_summary.txt  test.junction.bed  test.junction.xls  test.junctionSaturation_plot.r  test.junctionSaturation_summary.txt  test.junction_annotation.txt  test.junction_plot.r  test.read_distribution.txt
benchmark/expected/: GM12878_REP1.stats
benchmark/featureCounts/large/: featureCounts.tsv.summary
benchmark/featureCounts/small/: featureCounts.tsv  featureCounts.tsv.summary
benchmark/large/: config.yaml  run_dupRadar_R.R
benchmark/large/dupRust/: GM12878_REP1.markdup.sorted_duprateExpDensCurve_mqc.txt
benchmark/large/rust_output/: GM12878_REP1.markdup.sorted_dup_intercept_mqc.txt  GM12878_REP1.markdup.sorted_duprateExpDensCurve_mqc.txt  GM12878_REP1.markdup.sorted_intercept_slope.txt
benchmark/preseq/large/: lc_extrap_pe.txt  lc_extrap_se.txt
benchmark/preseq/small/: test.lc_extrap.txt
benchmark/profiling/: results.json
benchmark/qualimap/large/: qualimapReport.html  rnaseq_qc_results.txt
benchmark/qualimap/small/: qualimapReport.html  rnaseq_qc_results.txt
benchmark/r_output/: dupMatrix.txt
benchmark/rseqc/small/: bam_stat.txt  infer_experiment.txt  inner_distance.inner_distance.txt  inner_distance.inner_distance_plot.r  inner_distance.txt  junction_annotation.junction.Interact.bed  junction_annotation.junction.bed  junction_annotation.junction.xls  junction_annotation.junction_plot.r  junction_annotation.txt  junction_saturation.junctionSaturation_plot.r  junction_saturation.txt  read_distribution.txt  read_duplication.DupRate_plot.r  read_duplication.seq.DupRate.xls  read_duplication.txt
benchmark/rust_output/: test_dupMatrix.txt  test_dup_intercept_mqc.txt  test_duprateExpDensCurve_mqc.txt  test_intercept_slope.txt
benchmark/samtools/large/: flagstat.txt
benchmark/samtools/small/: flagstat.txt  idxstats.txt  stats.txt  test.flagstat  test.stats
benchmark/small/: run_dupRadar_R.R
benchmark/small/RustQC/: test.biotype_counts_mqc.tsv  test.featureCounts.tsv  test.featureCounts.tsv.summary  test_duprateExpDensCurve_mqc.txt
benchmark/small/dupRadar/: intercept_slope.txt
benchmark/small/dupRust/: test_dupMatrix.txt  test_dup_intercept_mqc.txt  test_duprateExpDensCurve_mqc.txt
cpp/: rng_shim.cpp
docs/: astro.config.mjs  generate_benchmark_svg.py  package-lock.json  package.json
docs/scripts/: capture_cli_svg.py
docs/src/styles/: custom.css
src/: bam_stat.rs  bamstat.rs  citations.rs  cli.rs  config.rs  counting.rs  cpu.rs  dupmatrix.rs  featurecounts.rs  fitting.rs  gtf.rs  infer_experiment.rs  inner_distance.rs  io.rs  junction_annotation.rs  junction_saturation.rs  lib.rs  main.rs  plots.rs  read_distribution.rs  read_duplication.rs  strandedness.rs  summary.rs  ui.rs
src/rna/: bam_flags.rs  cpp_rng.rs  genebody.rs  mod.rs  preseq.rs
src/rna/bam/: align_header.rs  align_record.rs  cigar.rs  io.rs  mod.rs  writer.rs
src/rna/bigwig/: mod.rs  (+2 more)
tests/: integration_test.rs
tests/data/: test.preseq_lc_extrap.txt  test.sam  test_nodup.bam  test_nodup.bam.bai  test_nodup.sam
tests/expected/: intercept_slope.txt
(+145 files in other folders)
