[package]
name = "rustqc"
version = "0.1.1"
edition = "2021"
rust-version = "1.87"
authors = ["Phil Ewels"]
description = "Fast RNA-seq QC in a single pass: dupRadar, featureCounts, 8 RSeQC tools, preseq, samtools stats, and Qualimap — reimplemented in Rust"
license = "MIT"
repository = "https://github.com/seqeralabs/RustQC"
readme = "README.md"
keywords = ["bioinformatics", "rna-seq", "duplication", "qc", "rseqc"]
categories = ["command-line-utilities", "science"]
homepage = "https://seqeralabs.github.io/RustQC/"

[[bin]]
name = "rustqc"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# BAM file reading
rust-htslib = { version = "1", features = ["static"] }

# Plotting
plotters = { version = "0.3", features = ["fontconfig-dlopen"] }
plotters-backend = "0.3"
plotters-svg = "0.3"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"

# Interval trees
coitrees = "0.4"

# Parallelism
rayon = "1.11"

# Random number generation
rand = "0.10"
rand_chacha = "0.10"

# Gzip decompression for .gz annotation files
flate2 = "1"

# General utilities
anyhow = "1"
log = "0.4"
env_logger = "0.11"
indexmap = "2"
crc32fast = "1.5.0"

# Terminal UI
console = "0.15"
indicatif = "0.17"
number_prefix = "0.4"
serde_json = "1"

[build-dependencies]
cc = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
