[package]
name = "rustqc"
version = "0.1.1"
edition = "2021"
rust-version = "1.87"
authors = ["Phil Ewels <phil.ewels@seqera.io>", "Jon Manning <jonathan.manning@seqera.io>"]
description = "Fast RNA-seq QC in a single pass: dupRadar, featureCounts, 8 RSeQC tools, preseq, samtools stats, and Qualimap — reimplemented in Rust"
license = "GPL-3.0-or-later"
repository = "https://github.com/seqeralabs/RustQC"
readme = "README.md"
keywords = ["bioinformatics", "rna-seq", "duplication", "qc", "rseqc"]
categories = ["command-line-utilities", "science"]
homepage = "https://seqeralabs.github.io/RustQC/"
exclude = ["benchmark/", "docs/", "paper/", "tests/", ".github/", "Dockerfile", ".dockerignore", ".pre-commit-config.yaml", "netlify.toml", "CONTRIBUTING.md", "AGENTS.md"]

[[bin]]
name = "rustqc"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# BAM file reading (noodles - pure Rust implementation)
noodles-bam = "0.88"
noodles-sam = "0.84"
noodles-core = "0.19"
noodles-csi = "0.55"

# Plotting
plotters = { version = "0.3", features = ["fontconfig-dlopen"] }
plotters-backend = "0.3"
plotters-svg = "0.3"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"

# Interval trees
coitrees = "0.4"

# Parallelism
rayon = "1.11"

# Random number generation
rand = "0.10"
rand_chacha = "0.10"

# Gzip decompression for .gz annotation files
flate2 = "1"

# General utilities
anyhow = "1"
log = "0.4"
env_logger = "0.11"
indexmap = "2"
crc32fast = "1.5.0"

# Terminal UI
console = "0.15"
indicatif = "0.17"
number_prefix = "0.4"
serde_json = "1"

[build-dependencies]
cc = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true